--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </li>
 
         <li>
-          <a href="https://www.instagram.com/encantosdebebe20/" 
+          <a href="https://www.instagram.com/formuladoenxoval/" 
           target="_blank">📺 As melhores roupas para bebês</a>
         </li>
 
         <li>
-          <a href="https://www.instagram.com/luaanals/" 
-          target="_blank">👙 Novinha Solteira</a>
+          <a href="https://www.instagram.com/luizmatheus90/" 
+          target="_blank">Criado por</a>
 
       </ul>
 
